--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -470,12 +470,12 @@ GetCentroids <- function(taxon_key,
  if(ensemble == 102){
    print(taxon_key)
  }
-  
+    
   Spp_Dist <- read_dbem_ens(
     taxon_key = taxon_key,
     year = year,
     data_type = data_type,
-    ensemble = ensemble,
+    ensemble = ensemble, # change me to ensemble
     path = my_path("G","DBEM")
   )
 
@@ -583,10 +583,46 @@ GetCentroids <- function(taxon_key,
                               units="km")
          ) %>% 
          select(taxon_key,eez_name,neighbour_id,ensemble,year,distance)
-         
+       
+       ### Code to produce graphs for Brazil and ruguay
+       
+       # name <- paste(taxon_key, "distrbution p = 90%") 
+       # Centroids %>% 
+       #   # filter(year %in% c(1951,2000,2010)) %>% 
+       #   ggplot() +
+       #   geom_point(
+       #     aes(
+       #       x = lon,
+       #       y = lat,
+       #       size = distance,
+       #       color = year,
+       #       shape= eez_name
+       #     )
+       #   ) +
+       #   geom_point(
+       #     aes(
+       #       x = longitude,
+       #       y = latitude,
+       #     ),
+       #     fill = "red"
+       #   ) +
+       #   geom_sf(data = braur_sf,
+       #           aes()
+       #   )  +
+       #   ggtitle(name)
+       # 
+       # ggsave(paste(taxon_key,"distribution.jpg",sep="_"),
+       # plot = last_plot(),
+       # width = 10,
+       # height = 8,
+       # units = "in",
+       # path = my_path("D")
+       # )
+       
       return(Centroids)
       
     }
+    
     # Determine the ids
     Ids <- unique(Neighbours_combo$neighbour_id)
     
@@ -619,14 +655,26 @@ GetCentroids <- function(taxon_key,
 # unique(Test_centroids$ensemble)
 # unique(Test_centroids$neigh)
 # 
-# ggplot(Test_centroids) +
-#   geom_line(
-#     aes(
-#       x = year,
-#       y = distance,
-#       color = eez_name
-#     )
-#   )
+
+
+
+
+# braur_sf <- World_ %>% 
+#   filter(name %in% c("Brazil","Uruguay"))
+
+# ggplot(braur_sf) +
+#   geom_sf() +
+  # geom_point(data = subset(Centroids, year %in% seq(1951,2100,20)),
+  # geom_point(data = subset(Centroids,eez_name =="Brazil"),
+  # geom_point(data = Centroids,
+  #            aes(
+  #              x = lon,
+  #              y = lat,
+  #              color = year#,
+  #              # size = value
+  #            )
+  # ) #+
+  # facet_wrap(~to_filter+eez_name)
 
 
 ```
@@ -699,7 +747,8 @@ TransIndex <- function(Centroids, # Expecting the results from the GetCentroids 
     mutate(RMean = rollmean(x = trans_index, 
                             10, 
                             align = "right", 
-                            fill = trans_index)
+                            fill = trans_index,
+                            na.rm=T)
     ) %>% 
     # filter(year > 1960) %>%
     select(taxon_key,neighbour_id,year,ensemble,trans_index,RMean)
@@ -711,7 +760,9 @@ TransIndex <- function(Centroids, # Expecting the results from the GetCentroids 
                  c(trend=mean,
                    ensemble_sd=sd,
                    n_ens = ~n()
-    )
+                   
+    ),
+    na.rm=T
     )
     
     # Valid ensembles
@@ -731,9 +782,10 @@ TransIndex <- function(Centroids, # Expecting the results from the GetCentroids 
   # Estimate noice from ensemble members
   historic_sd <- Trans_index %>% 
     filter(year <= Hist_y) %>% 
-    group_by(taxon_key,neighbour_id,ensemble) %>% #Average historic data per ensemble
+    group_by(taxon_key,neighbour_id,ensemble) %>% #Average historic data per year first
     summarise_at(vars("trans_index"),
-                 c(trend= mean)
+                 c(trend= mean),
+                 na.rm=T
                  ) %>% 
     group_by(taxon_key,neighbour_id) %>% #Capture ensemble variation
     summarise_at(vars("trend"),
@@ -792,7 +844,7 @@ TransIndex <- function(Centroids, # Expecting the results from the GetCentroids 
       } +
     geom_vline(xintercept = Hist_y,colour="blue",alpha = 0.5) +
     scale_x_continuous(breaks = seq(1950,2100,5)) +
-    theme_classic() +
+    theme_classic()
   
     tk <- unique(mean_sd_index$taxon_key)
   
@@ -822,20 +874,20 @@ TransIndex <- function(Centroids, # Expecting the results from the GetCentroids 
     
   }else{
   
-  Final_Result <- mean_sd_index %>%
-    filter(year > Hist_y) %>% 
-    mutate(
-           Tresh_one = ifelse(trend > (historic_sd$hist_mean+historic_sd$noise) | trend < (historic_sd$hist_mean-historic_sd$noise),"One",NA),
-           Tresh_two = ifelse(trend > (historic_sd$hist_mean+(2*historic_sd$noise)) | trend < (historic_sd$hist_mean-(2*historic_sd$noise)),"Two",NA)
-    ) %>%
-    gather("Tresh","YesNo",Tresh_one,Tresh_two) %>% 
-    filter(!is.na(YesNo)) %>% 
-    group_by(taxon_key,neighbour_id,n_ens,Tresh) %>%
-    summarise(emerging_yr= min(year)) %>%
-    left_join(EEZ_ids,
-              by = "neighbour_id") %>%
-    ungroup() %>%
-    select(taxon_key,eez_name,eez_neighbour,n_ens,emerging_yr,Tresh)
+    Final_Result <- mean_sd_index %>%
+      filter(year > Hist_y) %>%
+      mutate(
+        Tresh_one = ifelse(trend > (historic_sd$hist_mean+historic_sd$noise) | trend < (historic_sd$hist_mean-historic_sd$noise),"One",NA),
+        Tresh_two = ifelse(trend > (historic_sd$hist_mean+(2*historic_sd$noise)) | trend < (historic_sd$hist_mean-(2*historic_sd$noise)),"Two",NA)
+      ) %>%
+      gather("Tresh","YesNo",Tresh_one,Tresh_two) %>% 
+      filter(!is.na(YesNo)) %>% 
+      group_by(taxon_key,neighbour_id,n_ens,Tresh) %>%
+      summarise(emerging_yr= min(year)) %>%
+      left_join(EEZ_ids,
+                by = "neighbour_id") %>%
+      ungroup() %>%
+      select(taxon_key,eez_name,eez_neighbour,n_ens,emerging_yr,Tresh)
   
   return(Final_Result)
   }
@@ -865,16 +917,18 @@ GetTransIndex <- function(taxon_key,
   print("Starting Step One")
     # First step
     # Call Get centroids fucntion for centroids data per ensemble
-    Step_one <- bind_rows(
+  
+  Step_one <- bind_rows(
       lapply(ensemble_list,
              GetCentroids,
-             taxon_key = taxon_key,
+             taxon_key = taxon_key, # for testing
              year = year_df$year,
              data_type = data_type,
              Neighbours = Neighbours,
              eez_centroid = eez_centroid
              )
     )
+  
     
     # Set the different neighbouring pairs
     Ids <- unique(Step_one$neighbour_id)
@@ -940,7 +994,7 @@ GetTransIndex <- function(taxon_key,
 ## ----------------- ##
 
 # SAU relations between INDEX and Country's EEZs (see chunk 3)
-index_code <- my_path("G", extra_path = "Spatial/SAU/", name="SAU_matching_names.csv", read = TRUE)
+index_code <- my_path("G", extra_path = "Spatial/SAU/", name="sau_index_code.csv", read = TRUE)
 
 # EEZ list and their centroid of distribution (see chunk 3)
 eez_centroid <- my_path("D", extra_path = "Spatial/", name="eez_centroids.csv", read = TRUE)
